# opensim-core

./: .appveyor.yml  .clang-format  .dockerignore  .gitignore  .gitmodules  .opensim-core.nuspec  .opensim.nuspec  .travis.yml  ApiDoxygen.cmake  CHANGELOG.md  CHANGELOG_MOCO.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Copyright.txt  DEVELOPING.md  Doxyfile  Doxyfile.in  FindSimbody.cmake  LICENSE.txt  NOTICE  OpenSimAPI.html  README.md  README_MOCO.md  ReadMe.txt  TODO.txt  appveyor.yml  buildWheel.cmake  build_on_linux.sh  build_on_mac.sh  build_on_sherlock.sh  build_on_windows.ps1  doxygen-layout.xml  exponential_coordinate_force.py  ieee_fig03_OpenSim_SimTK_v2.ai  opensim-core-linux-build-script.sh  patch-gen.sh  poc_script.py
API/: CMakeLists.txt  readme.txt
API/doc/: BuildOpenSimPluginSteps.doc  CMakeLists.txt  index.html
API/templates/: AnalysisPlugin_Template.cpp  AnalysisPlugin_Template.h  AnalysisTemplate.cpp  AnalysisTemplate.h  FeedbackControllerTemplate.cpp  FeedbackControllerTemplate.h  MuscleTemplate.h
Applications/: CMakeLists.txt  opensim-install-command-line.sh
Applications/Analyze/: CMakeLists.txt  analyze.cpp  exampleHopperDevice.cpp
Applications/CMC/: CMakeLists.txt  cmc.cpp
Applications/Forward/: CMakeLists.txt  forward.cpp  testExternalLoads_1.xml
Applications/FunctionalJointCenter/: fjc.cpp
Applications/ID/: CMakeLists.txt  id.cpp
Applications/IK/: CMakeLists.txt  ik.cpp
Applications/Perturb/: CMakeLists.txt  setup.xml
Applications/RRA/: CMakeLists.txt  rra.cpp
Applications/Scale/: CMakeLists.txt  scale.cpp
Applications/opensense/: CMakeLists.txt  opensense.cpp
Applications/opensim/: CMakeLists.txt  opensim-cli.cpp  opensim.py  opensim_info.h  opensim_print_xml.h  opensim_run_tool.h  opensim_update_file.h  parse_arguments.h
Applications/opensim-cmd/: CMakeLists.txt  cli_helpers.cpp  cli_helpers.h  opensim-cmd.cpp  opensim-cmd_info.h  opensim-cmd_print-xml.h  opensim-cmd_run-tool.h  opensim-cmd_update-file.h  opensim-cmd_visualize.h  opensim-cmd_viz.h  parse_arguments.h
Applications/opensim-moco/: CMakeLists.txt  opensim-moco.cpp
Applications/opensim-visualize/: CMakeLists.txt  opensim-visualize.cpp
Applications/versionUpdate/: CMakeLists.txt  versionUpdate.cpp
Applications/visualize/: CMakeLists.txt  visualize.cpp
Bindings/: CMakeLists.txt  OpenSimHeaders.h  OpenSimHeaders_actuators.h  OpenSimHeaders_analyses.h  OpenSimHeaders_common.h  OpenSimHeaders_examplecomponents.h  OpenSimHeaders_jam.h  OpenSimHeaders_moco.h  OpenSimHeaders_opensim.h  OpenSimHeaders_simulation.h  OpenSimHeaders_tools.h  OpenSimHeaders_wraps.h  PropertyHelper.h  actuators.i  analyses.i  common.i  examplecomponents.i  jam.i  moco.i  opensim.i  preliminaries.i  simbody.i  simulation.i  simulation1.i  simulation2.i  simulation3.i  std.i  tools.i  wraps.i
Bindings/Java/: CMakeLists.txt  JavaLogSink.java
Bindings/Python/: CMakeLists.txt  OpenSimContext.cpp  OpenSimContext.h  README.md  __init__.py  pyproject.tom1  report.py  setup.py  setup.py.in  setup_win_python38.py  simple-arm.py  version.py.in
Bindings/SWIGSimTK/: Array.h  BigMatrix.h  CoordinateAxis.h  DecorativeGeometry.h  Integrator.h  MassProperties.h  Mat.h  MultibodySystem.h  PolygonalMesh.h  Quaternion.h  Readme.txt.txt  Rotation.h  RungeKuttaMersonIntegrator.h  SimbodyMatterSubsystem.h  SpatialAlgebra.h  Stage.h  State.h  TimeStepper.h  Transform.h  UnitVec.h  Vec.h  common.h
Bindings/common/: opensim.i
Moco/: CMakeLists.txt  generate_report.py  plot_casadi_sparsity.py  plot_iterate.py  plot_trajectory.py
Moco/Article/: .gitignore  moco_article_results.py  muscle_sit_to_stand.py
Moco/Bindings/: CMakeLists.txt  OpenSimHeaders_moco.h  OpenSimHeaders_muscollo.h  moco.i
Moco/Executable/: CMakeLists.txt  opensim-moco.cpp  opensim-muscollo.cpp
Moco/Geometry/: ConePendulum.vtp  README.md  anchor2.vtp  arm_r_1mc.vtp  arm_r_2distph.vtp  arm_r_2mc.vtp  arm_r_2midph.vtp  arm_r_2proxph.vtp  arm_r_3distph.vtp  arm_r_3mc.vtp  arm_r_3midph.vtp  arm_r_3proxph.vtp  arm_r_4distph.vtp  arm_r_4mc.vtp  arm_r_4midph.vtp  arm_r_4proxph.vtp  arm_r_5distph.vtp  arm_r_5mc.vtp  arm_r_5midph.vtp  arm_r_5proxph.vtp  arm_r_capitate.vtp  arm_r_hamate.vtp  arm_r_humerus.vtp  arm_r_lunate.vtp  arm_r_pisiform.vtp  arm_r_radius.vtp  arm_r_scaphoid.vtp  arm_r_thumbdist.vtp  arm_r_thumbprox.vtp  arm_r_trapezium.vtp  arm_r_trapezoid.vtp  arm_r_triquetrum.vtp  arm_r_ulna.vtp  big_block_centered.vtp  bofoot.vtp  calcaneous_rv.vtp  cerv1.vtp  cerv2.vtp  cerv2sm.vtp  cerv3.vtp  (+150 more)
Moco/Moco/: About.cpp  About.h  (+84 more)
MuscleRedundancySolver/: CMakeLists.txt  MuscleRedundancySolver.cpp  MuscleRedundancySolver.h  opensim-mrs.cpp
Muscollo/: CMakeLists.txt  plot_casadi_sparsity.py  plot_iterate.py
OpenSim/: ApiDoxygen.cmake  CMakeLists.txt  Doxygen.in.txt  OpenSim.h  OpenSimDoxyfile.in.txt  OpenSimDoxygenMain.h  version.h
Vendors/: CMakeLists.txt
cmake/: CMakeLists.txt  FindIPOPT.cmake  FindMatlab.cmake  FindNumPy.cmake  MatlabTestsRedirect.cmake  MocoConfig.cmake.in  MocoInstallMacDependencyLibraries.cmake.in  MocoMacros.cmake  MuscolloConfig.cmake.in  MuscolloInstallMacDependencyLibraries.cmake  MuscolloInstallMacDependencyLibraries.cmake.in  MuscolloMacros.cmake  OpenSimConfig.cmake.in  OpenSimMacros.cmake  OpenSimMocoConfig.cmake.in  OpenSimMocoInstallLinuxDependencyLibraries.cmake.in  OpenSimMocoInstallMacDependencyLibraries.cmake.in  OpenSimMocoMacros.cmake  SampleCMakeLists.txt
dependencies/: CMakeLists.txt  colpack.cmake  get.Metis.patch  get.Mumps.patch  ipopt.patch  joris_fixipopt.patch  opensim-core.cmake
doc/: .bintray.json  APIGuide.md  CMakeLists.txt  Doxyfile.in  OpenSimAPI.html  OpenSimDoxygenMain.dox  OpenSimExamples.dox  SimpleArmExample.md  doxyfile_developer.in  doxyfile_shared.in  doxyfile_user.in  doxygen-layout-developer.xml  doxygen-layout-user.xml  doxygen_developer.css  doxygen_shared.css  doxygen_user.css
mesh/: CMakeLists.txt  TODO.txt  mesh.cpp  mesh.h  plot_trajectory.py
tropter/: CMakeLists.txt  TODO.txt  plot_sparsity.py  plot_trajectory.py
(+6436 files in other folders)
